...

  Widget _button({required bool open, required VoidCallback onPressed}) => Padding(
    padding: const EdgeInsets.only(right: 6),
    child: Tooltip(
      tooltip: (context) => const TooltipContainer(child: Text('Content Drawer')),
      child: GhostButton(
        key: const ValueKey('status_bar_content_drawer'),
        density: ButtonDensity.compact,
        onPressed: onPressed,
        child: Icon(
          open ? LucideIcons.folderOpen : LucideIcons.folder,
          size: 11,
          color: open ? EditorColors.primary : EditorColors.foreground,
...
